--- a/src/app/shared/footer/footer.scss
+++ b/src/app/shared/footer/footer.scss
@@ -49,9 +49,6 @@
       gap: 1rem;
     }
     @media (max-width: bp.$breakpoint-xs) {
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
       padding: 0 1rem;
     }
   }
@@ -63,8 +60,8 @@
       0rem,
       12vw,
       17.5rem
-    ); // Scales from 0 to 280px (17.5rem)
-    padding-bottom: clamp(2rem, 4vw, 5rem); // Flexible bottom padding
+    ); 
+    padding-bottom: clamp(2rem, 4vw, 5rem); 
 
     @media (max-width: bp.$breakpoint-sm) {
       font-size: 4rem;
@@ -72,7 +69,7 @@
     @media (max-width: bp.$breakpoint-xs) {
       font-size: 40px;
       text-align: center;
-      padding-left: 0; // Override for mobile centering
+      padding-left: 0; 
     }
   }
 }
@@ -103,7 +100,6 @@ app-footer {
     @media (max-width: bp.$breakpoint-xs) {
       position: static;
       width: 100px;
-      height: auto;
     }
   }
   > p {
@@ -132,13 +128,6 @@ app-footer {
     justify-content: center;
     gap: 1rem;
   }
-  
-  @media (max-width: bp.$breakpoint-xs) {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
 }
 
 .wrapper-legal-sm {
@@ -152,9 +141,7 @@ app-footer {
   padding-right: 1.7rem;
   @media (max-width: bp.$breakpoint-xs) {
     padding: 0;
-    width: 100%;
-    height: fit-content;
-    
+    width: 100%; 
   }
 }
 
@@ -194,11 +181,9 @@ app-footer {
     }
     @media (max-width: bp.$breakpoint-sm) {
       font-size: 1rem;
-      text-align: center;
     }
     @media (max-width: bp.$breakpoint-xs) {
       font-size: 0.9rem;
-      text-align: center;
       padding-top: 0.5rem;
       width: 80%;
     }
@@ -367,7 +352,6 @@ app-footer {
     margin: 0 auto;
     padding: 0 1rem;
     box-sizing: border-box;
-
     justify-content: center;
     gap: 4rem;
     background-color: var(--color-primary);
@@ -382,26 +366,18 @@ app-footer {
       align-items: center;
       gap: 1rem;
     }
-    @media (max-width: bp.$breakpoint-xs) {
-      gap: 1rem;
-      padding: 0 1rem;
-    }
+    @media (max-width: bp.$breakpoint-xs) {padding: 0 1rem;}
   }
 
   .footer-bottom {
     margin-right: 2rem;
-
-    @media (max-width: bp.$breakpoint-sm) {
-      margin-right: 0;
-    }
+    @media (max-width: bp.$breakpoint-sm) {margin-right: 0;}
   }
 
   .wrapper-legal-sm {
     margin-left: 2rem;
 
-    @media (max-width: bp.$breakpoint-sm) {
-      margin-left: 0;
-    }
+    @media (max-width: bp.$breakpoint-sm) {margin-left: 0;}
   }
 
   .legal a {
